--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <title>Time tracking dashboard</title>
     <link rel="stylesheet" href="./src/assets/sass/main.scss" />
-    <script src="./src/index.js" type="module" defer></script>
+    <script src="./src/index.js" type="module"></script>
   </head>
   <body class="page">
     <main>
